[gd_scene load_steps=3 format=3 uid="uid://dpsq2sbwipui5"]

[ext_resource type="Script" uid="uid://b5mk4d3g0hybx" path="res://Scripts/constraint_type_popup.gd" id="1_5eppa"]
[ext_resource type="Theme" uid="uid://bhkvjdraqkwk6" path="res://text_button_theme.tres" id="1_dg3jh"]

[node name="ConstraintTypePopup" type="MarginContainer"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -105.0
offset_right = 265.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5eppa")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 5

[node name="Content" type="VBoxContainer" parent="PanelContainer/ContentMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/ContentMargin/Content"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
text = "Select constraint type"
autowrap_mode = 3

[node name="Buttons" type="VBoxContainer" parent="PanelContainer/ContentMargin/Content"]
layout_mode = 2
theme = ExtResource("1_dg3jh")

[node name="PreferenceButton" type="Button" parent="PanelContainer/ContentMargin/Content/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Preference"

[node name="CompositeButton" type="Button" parent="PanelContainer/ContentMargin/Content/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Composite"

[node name="CancelButton" type="Button" parent="PanelContainer/ContentMargin/Content/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.7372549, 0.42352942, 0.14509805, 1)
theme_override_colors/font_hover_color = Color(0.7372549, 0.42352942, 0.14509805, 1)
text = "Cancel!"

[connection signal="pressed" from="PanelContainer/ContentMargin/Content/Buttons/PreferenceButton" to="." method="_on_preference_button_pressed"]
[connection signal="pressed" from="PanelContainer/ContentMargin/Content/Buttons/CompositeButton" to="." method="_on_composite_button_pressed"]
[connection signal="pressed" from="PanelContainer/ContentMargin/Content/Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
